# YDB-Web-Server

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  NOTICE  README.md  _ydbmwebserver.manifest.json.in
ci/: needs_copyright.sh  run_test.sh  ydbgui.ydbcrypt
doc/: auth-auth.md  basic-usage.md  debugging.md  dockerfile-notes.md  important-utilities.md  start-stop.md  systemd.md  testing.md  tls-setup.md
src/: _ut.m  _ut1.m  _webapi.m  _webhome.m  _webjsonDecode.m  _webjsonDecodeTest.m  _webjsonEncode.m  _webjsonEncodeTest.m  _webreq.m  _webrsp.m  _webtest.m  _weburl.m  _webutils.m  _ydbwebapi.m  _ydbwebhome.m  _ydbwebjson.m  _ydbwebjsonDecode.m  _ydbwebjsonDecodeTest.m  _ydbwebjsonEncode.m  _ydbwebjsonEncodeTest.m  _ydbwebjsonTestData1.m  _ydbwebjsonTestData2.m  _ydbwebreq.m  _ydbwebrsp.m  _ydbwebtest.m  _ydbweburl.m  _ydbwebusers.m  _ydbwebutils.m  _ydbwebversion.m.in
